# r4py

./: .gitignore  .gitpod.yml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
building/: index.html
contributing/: index.html
docs/: building.md  contributing.md  donating.md  ecosystem.md  index.md  inspiration.md  resources.md
donating/: index.html
ecosystem/: index.html
inspiration/: index.html
resources/: index.html
search/: search_index.json
